--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -411,71 +411,6 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([151.,  75., 141., 206., 135.,  97., 138.,  63., 110., 310., 101.,\n",
-       "        69., 179., 185., 118., 171., 166., 144.,  97., 168.,  68.,  49.,\n",
-       "        68., 245., 184., 202., 137.,  85., 131., 283., 129.,  59., 341.,\n",
-       "        87.,  65., 102., 265., 276., 252.,  90., 100.,  55.,  61.,  92.,\n",
-       "       259.,  53., 190., 142.,  75., 142., 155., 225.,  59., 104., 182.,\n",
-       "       128.,  52.,  37., 170., 170.,  61., 144.,  52., 128.,  71., 163.,\n",
-       "       150.,  97., 160., 178.,  48., 270., 202., 111.,  85.,  42., 170.,\n",
-       "       200., 252., 113., 143.,  51.,  52., 210.,  65., 141.,  55., 134.,\n",
-       "        42., 111.,  98., 164.,  48.,  96.,  90., 162., 150., 279.,  92.,\n",
-       "        83., 128., 102., 302., 198.,  95.,  53., 134., 144., 232.,  81.,\n",
-       "       104.,  59., 246., 297., 258., 229., 275., 281., 179., 200., 200.,\n",
-       "       173., 180.,  84., 121., 161.,  99., 109., 115., 268., 274., 158.,\n",
-       "       107.,  83., 103., 272.,  85., 280., 336., 281., 118., 317., 235.,\n",
-       "        60., 174., 259., 178., 128.,  96., 126., 288.,  88., 292.,  71.,\n",
-       "       197., 186.,  25.,  84.,  96., 195.,  53., 217., 172., 131., 214.,\n",
-       "        59.,  70., 220., 268., 152.,  47.,  74., 295., 101., 151., 127.,\n",
-       "       237., 225.,  81., 151., 107.,  64., 138., 185., 265., 101., 137.,\n",
-       "       143., 141.,  79., 292., 178.,  91., 116.,  86., 122.,  72., 129.,\n",
-       "       142.,  90., 158.,  39., 196., 222., 277.,  99., 196., 202., 155.,\n",
-       "        77., 191.,  70.,  73.,  49.,  65., 263., 248., 296., 214., 185.,\n",
-       "        78.,  93., 252., 150.,  77., 208.,  77., 108., 160.,  53., 220.,\n",
-       "       154., 259.,  90., 246., 124.,  67.,  72., 257., 262., 275., 177.,\n",
-       "        71.,  47., 187., 125.,  78.,  51., 258., 215., 303., 243.,  91.,\n",
-       "       150., 310., 153., 346.,  63.,  89.,  50.,  39., 103., 308., 116.,\n",
-       "       145.,  74.,  45., 115., 264.,  87., 202., 127., 182., 241.,  66.,\n",
-       "        94., 283.,  64., 102., 200., 265.,  94., 230., 181., 156., 233.,\n",
-       "        60., 219.,  80.,  68., 332., 248.,  84., 200.,  55.,  85.,  89.,\n",
-       "        31., 129.,  83., 275.,  65., 198., 236., 253., 124.,  44., 172.,\n",
-       "       114., 142., 109., 180., 144., 163., 147.,  97., 220., 190., 109.,\n",
-       "       191., 122., 230., 242., 248., 249., 192., 131., 237.,  78., 135.,\n",
-       "       244., 199., 270., 164.,  72.,  96., 306.,  91., 214.,  95., 216.,\n",
-       "       263., 178., 113., 200., 139., 139.,  88., 148.,  88., 243.,  71.,\n",
-       "        77., 109., 272.,  60.,  54., 221.,  90., 311., 281., 182., 321.,\n",
-       "        58., 262., 206., 233., 242., 123., 167.,  63., 197.,  71., 168.,\n",
-       "       140., 217., 121., 235., 245.,  40.,  52., 104., 132.,  88.,  69.,\n",
-       "       219.,  72., 201., 110.,  51., 277.,  63., 118.,  69., 273., 258.,\n",
-       "        43., 198., 242., 232., 175.,  93., 168., 275., 293., 281.,  72.,\n",
-       "       140., 189., 181., 209., 136., 261., 113., 131., 174., 257.,  55.,\n",
-       "        84.,  42., 146., 212.])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "diabetes_target_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
@@ -490,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +446,7 @@
        "  <th>Date:</th>             <td>Wed, 24 Jul 2019</td> <th>  Prob (F-statistic):</th>          <td>4.77e-07</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:41:47</td>     <th>  Log-Likelihood:    </th>          <td> -2745.5</td>\n",
+       "  <th>Time:</th>                 <td>19:30:17</td>     <th>  Log-Likelihood:    </th>          <td> -2745.5</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   422</td>      <th>  AIC:               </th>          <td>   5511.</td>\n",
@@ -585,7 +520,7 @@
        "Model:                            OLS   Adj. R-squared (uncentered):              0.089\n",
        "Method:                 Least Squares   F-statistic:                              5.109\n",
        "Date:                Wed, 24 Jul 2019   Prob (F-statistic):                    4.77e-07\n",
-       "Time:                        17:41:47   Log-Likelihood:                         -2745.5\n",
+       "Time:                        19:30:17   Log-Likelihood:                         -2745.5\n",
        "No. Observations:                 422   AIC:                                      5511.\n",
        "Df Residuals:                     412   BIC:                                      5552.\n",
        "Df Model:                          10                                                  \n",
@@ -615,7 +550,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +735,7 @@
        "4          70                \\t\"ford torino\"  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +854,7 @@
        "Name: cylinders, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +878,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +935,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,16 +973,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8078357113194552"
+       "0.8064398348488717"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,16 +1009,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8100835452159599"
+       "0.8125651105197459"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,13 +1052,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "X_train09, X_test09, y_train09, y_test09 = train_test_split(predict, response, test_size=0.9)\n"
+    "X_train09, X_test09, y_train09, y_test09 = train_test_split(predict, response, test_size=0.1)\n"
    ]
   },
   {
@@ -1135,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,16 +1088,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8947113633321258"
+       "0.7561582122000119"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,16 +1119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.75387877695412"
+       "0.8390817791859242"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,25 +1171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'n_features'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-107f5ae51470>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mselector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRFE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mauto_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'n_features'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "selector = RFE(auto_model, n_features=3)\n"
+    "selector = RFE(auto_model09, n_features_to_select=3)\n"
    ]
   },
   {
@@ -1266,11 +1189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 2, 1, 1])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "sel = selector.fit(X_train09, y_train09)\n",
+    "sel.ranking_\n"
    ]
   },
   {
@@ -1284,11 +1221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "new_model = auto[['cylinders', 'acceleration',\n",
+    "       'model_year']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here:\n",
+    "\n",
+    "X_train_reduced, X_test_reduced, y_train_reduced, y_test_reduced = train_test_split(new_model, response, test_size = 0.2)\n"
    ]
   },
   {
@@ -1300,11 +1249,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6219215042325974"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here: \n"
+    "# Your code here: \n",
+    "\n",
+    "auto_model_reduced = linear_model.LinearRegression()\n",
+    "\n",
+    "auto_model_reduced.fit(X_train_reduced,y_train_reduced)\n",
+    "y_pred_reduced = auto_model_reduced.predict(X_train_reduced)\n",
+    "r2_score(y_pred_reduced, y_train_reduced)"
    ]
   },
   {
